Added first paragraph. added comments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <header>
+    <!--Navbar,stays at the top throughout-->
+    <header class="header">
       <div>
         <a href="">View Highscore</a>
       </div>
@@ -21,13 +22,18 @@
       </div>
     </header>
 
+    <!--Initial starter page -->
     <section>
       <div>
-        <h1></h1>
+        <h1>Coding quiz challenge</h1>
       </div>
 
       <div>
-        <p></p>
+        <p>
+          Try to answer the following question which are based on; HTML,CSS and
+          JavaScript.You have 75 seconds to answer all questions. Keep in mind
+          that for any incorrect answer you will be penalized by 10 seconds.
+        </p>
       </div>
 
       <div>
