added the start btn

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         </p>
       </div>
 
-      <div>
-        <button></button>
+      <div class="btn">
+        <button id="start btn">Start Quiz</button>
       </div>
     </section>
 
