--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
     <!--Initial starter page -->
     <section>
       <div>
-        <h1>Coding quiz challenge</h1>
+        <h1 class="title">Coding quiz challenge</h1>
       </div>
 
-      <div>
-        <p>
+      <div class="container">
+        <p class="paragraph">
           Try to answer the following question which are based on; HTML,CSS and
           JavaScript.You have 75 seconds to answer all questions. Keep in mind
           that for any incorrect answer you will be penalized by 10 seconds.
         </p>
       </div>
 
-      <div class="btn">
-        <button id="start btn">Start Quiz</button>
+      <div class="btn"></div>
+        <button class="start-btn">Start Quiz</button>
       </div>
     </section>
 
