fixed front page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div>
         <time>
-          <span id="seconds">Timer</span>
+          <span id="seconds">Timer: 80</span>
         </time>
       </div>
     </header>
@@ -31,7 +31,7 @@
       <div class="container">
         <p class="paragraph">
           Try to answer the following question which are based on; HTML,CSS and
-          JavaScript.You have 75 seconds to answer all questions. Keep in mind
+          JavaScript.You have 80 seconds to answer all questions. Keep in mind
           that for any incorrect answer you will be penalized by 10 seconds.
         </p>
       </div>
