Added questions html and styling

--- a/index.html
+++ b/index.html
@@ -40,8 +40,19 @@
         <button class="start-btn">Start Quiz</button>
       </div>
     </section>
+     
+    <!--Quiz questions page + answer button-->
+    <section class="questions-section">
 
-    <section></section>
+      <div class="questions">
+
+       <h2 class="question-title"></h2>
+
+       <div class="answer-btn"></div>
+
+      </div>
+
+    </section>
 
     <script src="./assests/javascript.js"></script>
   </body>
