added const variables to js

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <body>
     <!--Navbar,stays at the top throughout-->
     <header class="header" id="header">
-      <div>
-        <a href="">View Highscore</a>
+      <div class="highscore-container" id="highScore">
+        <a href="#">View Highscore</a>
       </div>
 
       <div>
+        <!--Timer to countdown till end of the game-->
         <time>
-          <span id="seconds">Timer: 80</span>
+          <span id="timer">Timer: 80</span>
         </time>
       </div>
     </header>
