Added quiz question

--- a/index.html
+++ b/index.html
@@ -42,12 +42,18 @@
       </div>
     </section>
 
-    <!--Quiz questions page + answer button-->
-    <section class="questions-section" id="questions-section">
-      <div class="questions" id="questions">
-        <h2 class="question-title" id="questions-title"></h2>
+    <!--Quiz questions page-->
 
-        <div class="answer-btn" id="answer-btn"></div>
+    <header class="questions-section" id="questions-section">
+      <div class="questions" id="questions">
+        <h2 class="question-title" id="questions-title">Question:</h2>
+      </div>
+      <!-- <div class="answer-btn" id="answer-btn"></div> -->
+    </header>
+
+    <section>
+      <div class="que_text">
+        <span> </span>
       </div>
     </section>
 
