completed first question page

--- a/index.html
+++ b/index.html
@@ -43,34 +43,56 @@
     </section>
 
     <!--Quiz questions page-->
+    <div class="questions-section" id="questions-section">
+      <header>
+        <div class="questions" id="questions">
+          <h2 class="question-title" id="questions-title">Question:</h2>
+        </div>
+        <!-- <div class="answer-btn" id="answer-btn"></div> -->
+      </header>
 
-    <header class="questions-section" id="questions-section">
-      <div class="questions" id="questions">
-        <h2 class="question-title" id="questions-title">Question:</h2>
-      </div>
-      <!-- <div class="answer-btn" id="answer-btn"></div> -->
-    </header>
+      <section>
+        <div class="question_text">
+          <span> What does CSS stand for?</span>
+        </div>
+        <div class="option_list">
+          <div class="option">
+            <span>Creative Style Sheets</span>
+            <div class="icon cross"><i class="fas fa-times"></i></div>
+          </div>
 
-    <section>
-      <div class="que_text">
-        <span> </span>
-      </div>
-    </section>
+          <div class="option">
+            <span>Compact Style Sheets</span>
+            <div class="icon cross"><i class="fas fa-times"></i></div>
+          </div>
+
+          <div class="option">
+            <span>Cascading Style Sheets</span>
+            <div class="icon tick"><i class="fas fa-check"></i></div>
+          </div>
+        </div>
+      </section>
+
+      <!--Quiz box footer-->
+      <footer>
+        <button class="next-question">Next Question</button>
+      </footer>
+    </div>
 
     <!--End of quiz page-->
     <section class="end-container" id="end-container">
       <div>
-        <h1>End of Quiz</h1>
+        <!-- <h1>End of Quiz</h1> -->
       </div>
 
       <!--High score-->
       <div class="high-score-container" id="high-score-container">
-        <h2 class="high-score" id="high-score">High Score</h2>
+        <!-- <h2 class="high-score" id="high-score">High Score</h2> -->
       </div>
 
       <!--Restart quiz-->
       <div>
-        <button class="restart-btn" id="restart-btn"></button>
+        <!-- <button class="restart-btn" id="restart-btn"></button> -->
       </div>
     </section>
 
