Started styling question box

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       </header>
 
       <section>
-        <div class="question_text">
+        <div class="question-text">
           <span> What does CSS stand for?</span>
         </div>
-        <div class="option_list">
+        <div class="option-list">
           <div class="option">
             <span>Creative Style Sheets</span>
             <div class="icon cross"><i class="fas fa-times"></i></div>
