fixed start button ,started js

--- a/index.html
+++ b/index.html
@@ -28,21 +28,19 @@
     </header>
 
     <!--Initial starter page -->
+    <div class="start-btn" id="start-btn"><button>Start Quiz</button></div>
+
     <section>
       <div>
         <h1 class="title" id="title">Coding quiz challenge</h1>
       </div>
 
-      <div class="container" id="container">
+      <div class="starter-container" id="starter-container">
         <p class="paragraph" id="paragraph">
           Try to answer the following question which are based on; HTML,CSS and
           JavaScript.You have 80 seconds to answer all questions. Keep in mind
           that for any incorrect answer you will be penalized by 10 seconds.
         </p>
-      </div>
-
-      <div>
-        <button class="start-btn" id="start-btn">Start Quiz</button>
       </div>
     </section>
 
@@ -98,7 +96,7 @@
       </div>
 
       <!--Quit/Restart button-->
-      <div class="buttons">
+      <div class="buttons" id="buttons">
         <button class="restart">Restart Quiz</button>
         <button class="quit">Quit Game</button>
       </div>
