added 2 buttons to initial page

--- a/index.html
+++ b/index.html
@@ -30,17 +30,22 @@
     <!--Initial starter page -->
     <div class="start-btn" id="start-btn"><button>Start Quiz</button></div>
 
-    <section>
+    <section class="starter-container" id="starter-container">
       <div>
         <h1 class="title" id="title">Coding quiz challenge</h1>
       </div>
 
-      <div class="starter-container" id="starter-container">
+      <div>
         <p class="paragraph" id="paragraph">
           Try to answer the following question which are based on; HTML,CSS and
           JavaScript.You have 80 seconds to answer all questions. Keep in mind
           that for any incorrect answer you will be penalized by 10 seconds.
         </p>
+      </div>
+
+      <div class="buttons">
+        <button class="quit">Exit Quiz</button>
+        <button class="continue">Continue</button>
       </div>
     </section>
 
