--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class="buttons">
-        <button class="quit">Exit Quiz</button>
+        <button class="exit">Exit Quiz</button>
         <button class="continue">Continue</button>
       </div>
     </section>
@@ -103,7 +103,7 @@
       <!--Quit/Restart button-->
       <div class="buttons" id="buttons">
         <button class="restart">Restart Quiz</button>
-        <button class="quit">Quit Game</button>
+        <button class="exit">Exit Game</button>
       </div>
     </section>
 
