created js file

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       </div>
     </section>
 
-    <script src="./assests/javascript.js"></script>
-    <script src="./"></script>
+    <script src="./assests/javascript/javascript.js"></script>
+    <script src="./assests/javascript/questions.js"></script>
   </body>
 </html>
