restarted JS , following tutorial

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1 class="title" id="title">Coding quiz challenge</h1>
 
     <!--Initial starter page -->
-    <div class="start-btn" id="start-btn"><button>Start Quiz</button></div>
+    <div class="start-btn" id="start-quiz"><button>Start Quiz</button></div>
 
     <section class="starter-container" id="starter-container">
     
@@ -78,6 +78,7 @@
       <footer>
         <div class="answer-alert-correct">Correct!</div>
         <div class="answer-alert-incorrect">Wrong!</div>
+
         <button class="next-question">Next Question</button>
       </footer>
     </div>
@@ -102,11 +103,11 @@
       <h2>Game Over</h2>
       <div class="buttons" id="buttons">
         <button class="restart">Restart Quiz</button>
-        <button class="exit">Exit Game</button>
+        <button class="exit">Exit Quiz</button>
       </div>
     </section>
 
-    <script src="./assests/javascript/javascript.js"></script>
+    <script src="./assests/javascript/index.js"></script>
     <script src="./assests/javascript/questions.js"></script>
   </body>
 </html>
