--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!--Initial starter page -->
     <div class="start-btn" id="start-quiz"><button>Start Quiz</button></div>
 
-    <section class="starter-container" id="starter-container">
+    <section class="start-container" id="start-container">
     
       <div>
         <p class="paragraph" id="paragraph">
@@ -108,6 +108,5 @@
     </section>
 
     <script src="./assests/javascript/index.js"></script>
-    <script src="./assests/javascript/questions.js"></script>
   </body>
 </html>
