--- a/index.html
+++ b/index.html
@@ -28,84 +28,50 @@
     <!--Initial starter page -->
     <div class="start-btn" id="start-quiz"><button>Start Quiz</button></div>
 
-    <section class="start-container" id="start-container">
-    
-      <div>
-        <p class="paragraph" id="paragraph">
-          Try to answer the following question which are based on; HTML,CSS and
-          JavaScript.You have 80 seconds to answer all questions. Keep in mind
-          that for any incorrect answer you will be penalized by 10 seconds.
-        </p>
-      </div>
-
-      <div class="buttons">
-        <button class="exit">Exit Quiz</button>
-        <button class="continue">Continue</button>
-      </div>
-    </section>
-
-    <!--Quiz questions page-->
-    <div class="questions-section" id="questions-section">
-      <header>
-        <div class="questions" id="questions">
-          <h2 class="question-title" id="questions-title">Question:</h2>
-        </div>
-        <!-- <div class="answer-btn" id="answer-btn"></div> -->
-      </header>
-
-      <section>
-        <h2 class="question-text">
-          <span> What does CSS stand for?</span>
-        </h2>
-
-        <div class="option-list">
-          <button class="option">
-            <span>Creative Style Sheets</span>
-          </button>
-
-          <button class="option">
-            <span>Compact Style Sheets</span>
-          </button>
-
-          <button class="option">
-            <span>Cascading Style Sheets</span>
-          </button>
+    <main class="main" id="main-container">
+      <section class="start-container" id="start-container">
+        <div>
+          <p class="paragraph" id="paragraph">
+            Try to answer the following question which are based on; HTML,CSS
+            and JavaScript.You have 80 seconds to answer all questions. Keep in
+            mind that for any incorrect answer you will be penalized by 10
+            seconds.
+          </p>
         </div>
       </section>
-    
 
       <!--Quiz box footer-->
-      <footer>
-        <div class="answer-alert-correct">Correct!</div>
-        <div class="answer-alert-incorrect">Wrong!</div>
+      <!-- <footer>
+          <div class="answer-alert-correct">Correct!</div>
+          <div class="answer-alert-incorrect">Wrong!</div>
 
-        <button class="next-question">Next Question</button>
-      </footer>
-    </div>
-
-    <!--Results Page-->
-    <!--Score total-->
-    <section class="results-container" id="results-container">
-      <form>
-        <h2 class="question">You've scored -- out of 6</h2>
-
-        <div>
-          <input placeholder="Enter your initials"/>
-        </div>
-
-        <div>
-          <button class="submit">Submit</button>
-        </div> 
-      </form>
-    </section>
-
-    <section class="game-over">
-      <h2>Game Over</h2>
-      <div class="buttons" id="buttons">
-        <button class="restart">Restart Quiz</button>
-        <button class="exit">Exit Quiz</button>
+          <button class="next-question">Next Question</button>
+        </footer>
       </div>
-    </section>
+
+      <section class="results-container" id="results-container">
+        <form>
+          <h2 class="question">You've scored -- out of 6</h2>
+
+          <div>
+            <input placeholder="Enter your initials" />
+          </div>
+
+          <div>
+            <button class="submit">Submit</button>
+          </div>
+        </form>
+      </section>
+
+      <section class="game-over">
+        <h2>Game Over</h2>
+        <div class="buttons" id="buttons">
+          <button class="restart">Restart Quiz</button>
+          <button class="exit">Exit Quiz</button>
+        </div>
+      </section>
+      -->
+    </main>
 
     <script src="./assests/javascript/index.js"></script>
   </body>
