added timer function using js

--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
         <a href="#">View High Score</a>
       </div>
 
-      <div>
-        <!--Timer to countdown till end of the game-->
-        <time>
-          <span class="timer" id="timer">Timer: 80</span>
-        </time>
-      </div>
+      <div class="timer">Time: <span id="countdown">0</span></div>
     </header>
 
     <h1 class="title" id="title">Coding quiz challenge</h1>
@@ -33,8 +28,8 @@
         <div>
           <p class="paragraph" id="paragraph">
             Try to answer the following question which are based on; HTML,CSS
-            and JavaScript.You have 80 seconds to answer all questions. Keep in
-            mind that for any incorrect answer you will be penalized by 10
+            and JavaScript.You have 25 seconds to answer all questions. Keep in
+            mind that for any incorrect answer you will be penalized by 3
             seconds.
           </p>
         </div>
