Set correct and incorrect alerts

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
           <div class="answer-alert-correct">Correct!</div>
           <div class="answer-alert-incorrect">Wrong!</div>
 
-          <button class="next-question">Next Question</button>
         </footer>
-      </div>
+      </div> -->
 
-      <section class="results-container" id="results-container">
+      <!-- <section class="score-form" id="score-form">
         <form>
           <h2 class="question">You've scored -- out of 6</h2>
 
@@ -64,8 +63,7 @@
           <button class="restart">Restart Quiz</button>
           <button class="exit">Exit Quiz</button>
         </div>
-      </section>
-      -->
+      </section> -->
     </main>
 
     <script src="./assests/javascript/index.js"></script>
