append element to form

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <!--Initial starter page -->
     <div class="start-btn" id="start-quiz"><button>Start Quiz</button></div>
 
+    <div id="alert-container"></div>
+
     <main class="main" id="main-container">
       <section class="start-container" id="start-container">
         <div>
@@ -36,14 +38,8 @@
       </section>
 
       <!--Quiz box footer-->
-      <!-- <footer>
-          <div class="answer-alert-correct">Correct!</div>
-          <div class="answer-alert-incorrect">Wrong!</div>
 
-        </footer>
-      </div> -->
-
-      <!-- <section class="score-form" id="score-form">
+      <!-- <div class="score-form" id="score-form">
         <form>
           <h2 class="question">You've scored -- out of 6</h2>
 
@@ -55,7 +51,7 @@
             <button class="submit">Submit</button>
           </div>
         </form>
-      </section>
+      </div>
 
       <section class="game-over">
         <h2>Game Over</h2>
