append score onto form

--- a/index.html
+++ b/index.html
@@ -41,19 +41,22 @@
 
       <!-- <div class="score-form" id="score-form">
         <form>
-          <h2 class="question">You've scored -- out of 6</h2>
+          <h2 class="question">Your score is 20 </h2>
+    
+          <div class ="form-container">
+            <div class="form-item">
+              <input placeholder="Enter your initials" />
+            </div>
 
-          <div>
-            <input placeholder="Enter your initials" />
-          </div>
+            <div class = "form-item">
+              <button class="btn">Submit</button>
+            </div>
 
-          <div>
-            <button class="submit">Submit</button>
           </div>
         </form>
-      </div>
+      </div> -->
 
-      <section class="game-over">
+      <!-- <section class="game-over">
         <h2>Game Over</h2>
         <div class="buttons" id="buttons">
           <button class="restart">Restart Quiz</button>
