render score form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <h1 class="title" id="title">Coding quiz challenge</h1>
 
     <!--Initial starter page -->
-    <div class="start-btn" id="start-quiz"><button>Start Quiz</button></div>
 
     <div id="alert-container"></div>
 
@@ -35,28 +34,11 @@
             seconds.
           </p>
         </div>
+
+        <div class="start-btn" id="start-quiz"><button>Start Quiz</button></div>
       </section>
 
-      <!--Quiz box footer-->
-
-      <!-- <div class="score-form" id="score-form">
-        <form>
-          <h2 class="question">Your score is 20 </h2>
-    
-          <div class ="form-container">
-            <div class="form-item">
-              <input placeholder="Enter your initials" />
-            </div>
-
-            <div class = "form-item">
-              <button class="btn">Submit</button>
-            </div>
-
-          </div>
-        </form>
-      </div> -->
-
-      <!-- <section class="game-over">
+      <!-- <section class="container game-over">
         <h2>Game Over</h2>
         <div class="buttons" id="buttons">
           <button class="restart">Restart Quiz</button>
