created highscore html and js

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Navbar,stays at the top throughout-->
     <header class="header" id="header">
       <div class="highscore-container" id="highScore">
-        <a href="#">View High Score</a>
+        <a href="./highscores.html">View High Score</a>
       </div>
 
       <div class="timer">Time: <span id="countdown">0</span></div>
@@ -37,14 +37,6 @@
 
         <div class="start-btn" id="start-quiz"><button>Start Quiz</button></div>
       </section>
-
-      <!-- <section class="container game-over">
-        <h2>Game Over</h2>
-        <div class="buttons" id="buttons">
-          <button class="restart">Restart Quiz</button>
-          <button class="exit">Exit Quiz</button>
-        </div>
-      </section> -->
     </main>
 
     <script src="./assests/javascript/index.js"></script>
