--- a/highscores.html
+++ b/highscores.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>coding Quiz | Highscores</title>
-</head>
-<body>
-    <h1>Highscores</h1>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <title>Highscores</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="nav-item">
+        <a href="./index.html">Home</a>
+      </div>
+    </header>
+    <main id="main-container">
+      <div class="container start-container" id="start-container">
+        <h1 class="title">High Scores</h1>
+        <div id="high-scores"></div>
+      </div>
+      <div class="container btn-container">
+        <div>
+          <button class="btn" id="go-back-btn">Go Back</button>
+        </div>
+        <div>
+          <button class="btn" id="clear-scores-btn">Clear Scores</button>
+        </div>
+      </div>
+    </main>
     <script src="./assests/javascript/highscores.js"></script>
-</body>
+  </body>
 </html>
